--- a/package.json
+++ b/package.json
@@ -4,14 +4,23 @@
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "start": "npm run build",
+    "build": "vue-cli-service export NODE_ENV=production && build  babel msiq-server --out-dir prod-server",
+    "lint": "vue-cli-service lint",
+    "dev": "concurrently \"export  NODE_ENV=developement\" \"babel msiq-server --out-dir prod-server --watch\" \"nodemon prod-server/index.js\" \"npm run serve\"",
+    "temp": "set NODE_ENV=production&& nodemon prod-server/index.js"
   },
   "dependencies": {
     "animate.css": "^4.1.0",
     "axios": "^0.20.0",
+    "body-parse": "^0.1.0",
+    "body-parser": "^1.19.0",
+    "concurrently": "^5.3.0",
     "core-js": "^3.6.5",
+    "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
+    "serve-favicon": "^2.5.0",
+    "socket.io": "^2.3.0",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
     "vuetify": "^2.2.11",
@@ -23,10 +32,15 @@
     "@vue/cli-plugin-eslint": "~4.5.0",
     "@vue/cli-plugin-router": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
+    "babel-cli": "^6.26.0",
     "babel-eslint": "^10.1.0",
+    "babel-preset-env": "^1.7.0",
+    "cors": "^2.8.5",
+    "cross-env": "^7.0.2",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
     "material-design-icons-iconfont": "^5.0.1",
+    "morgan": "^1.10.0",
     "sass": "^1.19.0",
     "sass-loader": "^8.0.0",
     "vue-cli-plugin-vuetify": "~2.0.7",
