--- a/package.json
+++ b/package.json
@@ -5,12 +5,13 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "start": "npm run build",
-    "build": "vue-cli-service export NODE_ENV=production && build  babel msiq-server --out-dir prod-server",
+    "build": "vue-cli-service  babel msiq-server --out-dir prod-server",
     "lint": "vue-cli-service lint",
-    "dev": "concurrently \"export  NODE_ENV=developement\" \"babel msiq-server --out-dir prod-server --watch\" \"nodemon prod-server/index.js\" \"npm run serve\"",
+    "dev": "concurrently \"babel msiq-server --watch --out-dir prod-server \" \"nodemon prod-server/index.js\" \"npm run serve\"",
     "temp": "set NODE_ENV=production&& nodemon prod-server/index.js"
   },
   "dependencies": {
+    "@babel/polyfill": "^7.11.5",
     "animate.css": "^4.1.0",
     "axios": "^0.20.0",
     "body-parse": "^0.1.0",
@@ -19,6 +20,7 @@
     "core-js": "^3.6.5",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
+    "mssql": "^6.2.3",
     "serve-favicon": "^2.5.0",
     "socket.io": "^2.3.0",
     "vue": "^2.6.11",
@@ -27,12 +29,14 @@
     "vuex": "^3.5.1"
   },
   "devDependencies": {
+    "@babel/cli": "^7.11.6",
+    "@babel/core": "^7.11.6",
+    "@babel/preset-env": "^7.11.5",
     "@mdi/font": "^5.5.55",
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-plugin-eslint": "~4.5.0",
     "@vue/cli-plugin-router": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
-    "babel-cli": "^6.26.0",
     "babel-eslint": "^10.1.0",
     "babel-preset-env": "^1.7.0",
     "cors": "^2.8.5",
