--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@babel/polyfill": "^7.11.5",
     "animate.css": "^4.1.0",
     "axios": "^0.20.0",
+    "bcrypt": "^5.0.0",
     "body-parse": "^0.1.0",
     "body-parser": "^1.19.0",
     "concurrently": "^5.3.0",
