--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mssql": "^6.2.3",
+    "multer": "^1.4.2",
     "serve-favicon": "^2.5.0",
     "socket.io": "^2.3.0",
     "vue": "^2.6.11",
