--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "jquery": "^3.5.1",
     "jsonwebtoken": "^8.5.1",
     "jspdf": "^2.1.1",
+    "jspdf-autotable": "^3.5.13",
     "mssql": "^6.2.3",
     "multer": "^1.4.2",
     "pdfmake": "^0.1.68",
