--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "cookie-parser": "^1.4.5",
     "core-js": "^3.6.5",
     "express": "^4.17.1",
+    "howler": "^2.2.1",
     "html2canvas": "^1.0.0-rc.7",
     "jquery": "^3.5.1",
     "jsonwebtoken": "^8.5.1",
