--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
-    "start": "npm run build",
-    "build": "vue-cli-service  babel msiq-server --out-dir prod-server",
+    "start": "set NODE_ENV=production && node final-server/index.js",
+    "build": "set NODE_ENV=production && babel msiq-server --out-dir final-server && vue-cli-service build",
     "lint": "vue-cli-service lint",
     "dev": "concurrently \"babel msiq-server --watch --out-dir prod-server \" \"nodemon prod-server/index.js\" \"npm run serve\"",
     "temp": "set NODE_ENV=production&& nodemon prod-server/index.js"
@@ -40,8 +40,8 @@
     "vuex": "^3.5.1"
   },
   "devDependencies": {
-    "@babel/cli": "^7.11.6",
-    "@babel/core": "^7.11.6",
+    "@babel/cli": "^7.12.7",
+    "@babel/core": "^7.12.7",
     "@babel/preset-env": "^7.11.5",
     "@mdi/font": "^5.5.55",
     "@vue/cli-plugin-babel": "~4.5.0",
