--- a/package.json
+++ b/package.json
@@ -35,9 +35,11 @@
     "jspdf-autotable": "^3.5.13",
     "mssql": "^6.2.3",
     "multer": "^1.4.2",
+    "nodemailer": "^6.4.16",
     "pdfmake": "^0.1.68",
     "serve-favicon": "^2.5.0",
     "socket.io": "^2.3.0",
+    "uuidv1": "^1.6.14",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
     "vuetify": "^2.2.11",
