--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "jsonwebtoken": "^8.5.1",
     "jspdf": "^2.1.1",
     "jspdf-autotable": "^3.5.13",
+    "ldap-authentication": "^2.2.6",
     "mssql": "^6.2.3",
     "multer": "^1.4.2",
     "nodemailer": "^6.4.16",
