--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "jspdf": "^2.1.1",
     "jspdf-autotable": "^3.5.13",
     "ldap-authentication": "^2.2.6",
+    "ldapjs": "^2.2.3",
     "mssql": "^6.2.3",
     "multer": "^1.4.2",
     "nodemailer": "^6.4.16",
